fix: Home nav link  to index page

--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -28,7 +28,7 @@
                 </a>
                 <ul id="main-nav">
                     <li>
-                        <a href="#" class="nav-links nav-links-active">HOME</a>
+                        <a href="index.html" class="nav-links nav-links-active">HOME</a>
                     </li>
                     <li>
                         <a href="#" class="nav-links">FAVORITE</a>
