--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -21,7 +21,7 @@
         <div class="nav__wrapper">
             <nav class="navbar">
                 <button id="navbar-toggle" id="hamburger">
-                    <i class="fa fa-lg fa-bars"></i>
+                    <i class="fa fa-2x fa-bars"></i>
                 </button>
                 <a href="#" id="logo">
                     <img class="navbar__logo" src="images/logo/logo.png" alt="logo-spicy-heat" srcset="">
