fix: Logo and home page to root directory

--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -23,12 +23,12 @@
                 <button id="navbar-toggle" id="hamburger">
                     <i class="fa fa-2x fa-bars"></i>
                 </button>
-                <a href="#" id="logo">
+                <a href="/" id="logo">
                     <img class="navbar__logo" src="images/logo/logo.png" alt="logo-spicy-heat" srcset="">
                 </a>
                 <ul id="main-nav">
                     <li>
-                        <a href="index.html" class="nav-links nav-links-active">HOME</a>
+                        <a href="/" class="nav-links nav-links-active">HOME</a>
                     </li>
                     <li>
                         <a href="#" class="nav-links">FAVORITE</a>
